Stylesheet local links

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,8 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+{#
 <link rel="stylesheet" href="{{ get_url(path='tachyons.min.css') }}">
 <link rel="stylesheet" href="{{ get_url(path='style.css') }}">
+*}
+<link rel="stylesheet" href="tachyons.min.css">
+<link rel="stylesheet" href="style.css">
+
 
 <title>{{ section.title }} - TopAppField</title>
 </head>
