--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/css/style.css">
 
 <title>
-	{% if section.title %} {{ section.title - TopAppField }}
+	{% if section.title %} {{ section.title }} - TopAppField
 	{% else %} TopAppField {% endif%}
 </title>
 </head>
