Fix: links to images

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,7 +27,7 @@
 <footer class="ma0 mt7 footer-bg-color">
 {% block footer %} {% endblock footer %}
 <section class="tc pa4">
-	<img src="imgs/logo.png" class="w3 br-100" alt="TopAppField">
+	<img src="/imgs/logo.png" class="w3 br-100" alt="TopAppField">
 	<h1 class="dark-green ma0">TopAppField</h1>
 	<p class="tc gray ">© 2021 – 2022 Copyright TopAppField. All rights reserved. Various trademarks held by their respective owners.</p>
 </section>
