--- a/templates/countonme.html
+++ b/templates/countonme.html
@@ -1,73 +1,101 @@
 {% extends "_base.html" %}
-{% import "_macros.html" as macros %}
+
+{% block navbar %}
+<section class="py-1 topbar-bg">
+	<div class="container">
+		<div class="d-flex flex-column flex-md-row align-items-center">
+			<a href="/" class="d-flex align-items-center text-decoration-none topbar-fg">
+				<img src="/imgs/logo.png" class="w-20 p-1 border rounded-circle" alt="TopAppField logo"></img>  
+				<span class="fs-5 ps-2">TopAppField</span>
+			</a>
+			<nav class="d-inline-flex ms-md-auto">
+				<a class="me-3 py-2 text-dark text-decoration-none" href="/countonme">Count On Me</a>
+				<a class="me-3 py-2 text-dark text-decoration-none" href="/torcher">Torcher</a>
+				<a class="me-3 py-2 text-dark text-decoration-none" href="/support">Support</a>
+				<a class="py-2 text-dark text-decoration-none" href="/about">About</a>
+			</nav>
+		</div>
+	</div>
+</section>
+{% endblock navbar %}
 
 
 {% block header %}
-<header class="pv5 bg-light-green">
-<article class="tc">
-	<img src="{{ section.path }}icon.png" class="br-100 pa1 ba b--black-10 h4 w4" alt="Count On Me">
-	<h1 class="f1 f1-ns mid-gray mb0 dark-green">Count On Me</h1>
-	<h2 class="f3 gray fw2 tracked mt1">{{ section.description }}</h2>
-</article>
+<header class="py-5 topheader-bg">
+	<article class="container text-center">
+		<img src="{{ section.path }}icon.png" class="w-15 p-1 border rounded-circle" alt="Count On Me">
+		<h1 class="fs-1 mb-1 topheader-fg">Count On Me</h1>
+		<h2 class="fs-4 text-secondary fw-light">{{ section.description }}</h2>
+	</article>
 </header>
 {% endblock header %}
 
 
 {% block main %}
-
-
-<section class="pv5 tc">
-	<img src="/countonme/banner.png">	
+<section class="py-5">
+	<article class="container text-center">
+		<img class="w-90" src="/countonme/banner.png">	
+	</article>
 </section>
-
 
 {% include "shortcodes/installapp.html" %}
 
-
-<section class="pv4 bg-washed-yellow">
-<article class="mw8 center cf ph2">
-	<h1 class="f4 small-caps orange tracked">Features</h1>
-	<div class="fl w-100-m w-50-ns h4 pa2">
-		<h1 class="f3 gold">Privacy-first app</h1>
-		<p class="dark-gray">Your data is stored only on your phone and remains there. Nothing is transfered to the internet except if you export your data on your own.</p>
-	</div>
-	<div class="fl w-100 w-50-ns h4 pa2">
-		<h1 class="f3 gold">Free of ads</h1>
-		<p class="dark-gray">There are no ads in the app. No bandwidth stealing and no delays due to ad loading. Your focus stays on counting.</p>
-	</div>
-
-	<div class="fl w-100 w-50-ns h4 pa2">
-		<h1 class="f3 gold">Full customizable</h1>
-		<p class="dark-gray">Create many different types of counters and organize them using tags. Set counter label, color, icon, sound, description, etc.</p>
-	</div>
-	<div class="fl w-100 w-50-ns h4 pa2">
-		<h1 class="f3 gold">Various effects available</h1>
-		<p class="dark-gray">Notification of counter change via feedback such as sound effect, phonelight flash, screen flash, vibration etc.</p>
-	</div>
-
-	<div class="fl w-100 w-50-ns h4 pa2">
-		<h1 class="f3 gold">Rich data and statistics</h1>
-		<p class="dark-gray">See details of your counters. Follow your progress with graphical progress bar. Compare increments and decrements with pie chart.</p>
-	</div>
-	<div class="fl w-100 w-50-ns h4 pa2">
-		<h1 class="f3 gold">Advanced features</h1>
-		<p>Reset counter and log changes. Lock counter. Export and import counter data.</p>
-	</div>
-	<div class="fl w-100 w-100-ns h4 pa2">
-		<h1 class="f3 gold">Freemium and Premium</h1>
-		<p>All features and functionalities are freely available in the basic version. However, you may support our efforts by buying Premium version - one time payment for a lifetime. Thank you in advance.</p>
-	</div>
-</article>
+<section class="py-4 bg-warning bg-opacity-10">
+	<article class="container">
+		<h1 class="text-danger text-smallcaps text-tracked">Features</h1>
+		<div class="row row-cols-1 row-cols-md-2 g-4">
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Privacy-first app</h3>
+					<p class="text-muted">Your data is stored only on your phone and remains there. Nothing is transfered to the internet except if you export your data on your own.</p>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Free of ads</h3>
+					<p class="text-muted">There are no ads in the app. No bandwidth stealing and no delays due to ad loading. Your focus stays on counting.</p>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Full customizable</h3>
+					<p class="text-muted">Create many different types of counters and organize them using tags. Set counter label, color, icon, sound, description, etc.</p>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Various effects available</h3>
+					<p class="text-muted">Notification of counter change via feedback such as sound effect, phonelight flash, screen flash, vibration etc.</p>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Rich data and statistics</h3>
+					<p class="text-muted">See details of your counters. Follow your progress with graphical progress bar. Compare increments and decrements with pie chart.</p>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card p-2 h-100">
+					<h3 class="text-warning">Advanced features</h3>
+					<p class="text-muted">Reset counter and log changes. Lock counter. Export and import counter data.</p>
+				</div>
+			</div>
+		</div>
+		<div class="card p-2 h-100 mt-4">
+			<h3 class="text-warning">Freemium and Premium</h3>
+			<p class="text-muted">All features and functionalities are freely available in the basic version. However, you may support our efforts by buying Premium version - one time payment for a lifetime. Thank you in advance.</p>
+		</div>
+	</article>
 </section>
 
 
-<section class="pv4 bg-washed-blue">
-<article class="mw8 center cf ph2">
-	<h1 class="f4 small-caps orange tracked">Screenshots</h1>
-	<div class="tc">
-		{{ macros::image_gallery(path="countonme/", imgs=["ss2.png", "ss4.png", "ss3.png", "ss1.png", "ss6.png", "ss5.png"]) }}
-	</div>
-</article>
+<section class="py-4 bg-info bg-opacity-10">
+	<article class="container">
+		<h1 class="text-danger text-smallcaps text-tracked">Screenshots</h1>
+		<div class="text-center">
+			{{ macros::image_gallery(path="countonme/", imgs=["ss2.png", "ss4.png", "ss3.png", "ss1.png", "ss6.png", "ss5.png"]) }}
+		</div>
+	</article>
 </section>
 
 
