--- a/templates/shortcodes/installapp.html
+++ b/templates/shortcodes/installapp.html
@@ -1,17 +1,15 @@
-<section class="ph2 pv5">
-<article class="mw8 center br2 ba b--light-blue bg-lightest-blue dt-ns dt--fixed-ns">
-	<div class="pa3 dtc-ns v-mid">
-        <div class="tc">
-          <h2 class="fw4 blue mt0 mb3">
-          {{ caption | default(value='Want to count something?') }}
-          </h2>
-          <p class="black-70 lh-copy mv0">
-            Count On Me app for Android OS is easily available for you to install in the Google Play store.
-          </p>
-        </div>
-      </div>
-      <div class="pa3 dtc-ns v-mid w-30-ns w-100">
-        <a href="https://play.google.com/store/apps/details?id=com.topappfield.CountOnMe" class="no-underline f5 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Install from Google Play store</a>
-	</div>
-</article>
+<section class="alert alert-info w-70 mx-auto my-5 p-4">
+  <div class="row">
+    <div class="col-md-8 col-12 text-center">
+      <h2 class="text-primary">
+        {{ caption | default(value='Want to count something?') }}
+      </h2>
+      <p class="text-muted">
+        Count On Me app for Android OS is easily available for you to install in the Google Play store.
+      </p>
+    </div>
+    <div class="col-md-4 col-12 p-3 text-center d-flex align-items-center">
+        <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.topappfield.CountOnMe">Install from Google Play store</a>
+    </div>
+  </div>
 </section>
