--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,12 +8,8 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{# <link rel="stylesheet" href="{{ get_url(path='tachyons.min.css') }}"> #}
-{# <link rel="stylesheet" href="{{ get_url(path='style.css') }}"> #}
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<link rel="stylesheet" href="/css/tachyons.min.css">
 <link rel="stylesheet" href="/css/style.css">
 
 <title>
@@ -34,7 +30,7 @@
 
 {% block footer %} {% endblock footer %}
 
-<footer class="footer mt-auto p-5 text-center bg-success bg-opacity-25 bg-gradient">
+<footer class="footer mt-auto p-5 text-center bg-success text-success bg-opacity-25 bg-gradient">
   <img src="/imgs/logo.png" class="border rounded-circle border-light p-1" style="width: 128px" alt="TopAppField">
   <h1 class="m-1">TopAppField</h1>
   <small class="text-muted">© 2021 – 2022 Copyright TopAppField. All rights reserved. Various trademarks held by their respective owners.</small>
