--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 
 {% block header %}
-<header class="clearfix bg-success bg-opacity-10">
+<header class="clearfix mb-5">
 <div class="container-xl p-0 mb-5 center text-center position-relative">
 	<img class="img-fluid mw-100" src="imgs/banner.png" alt="TopAppField">
 	<div class="w-60 position-absolute top-100 start-50 translate-middle">
@@ -31,14 +31,14 @@
 			 </div>
 			<div class="col-sm col-md-9">
 				<h1 class="mt-0 mb-1">Count On Me</h1>
-				<p class="text-muted">The ultimate app for counting anything.</p>
+				<p class="text-muted">A counter app with many options, advanced features, statistics, and various methods of counting.</p>
 				<a class="btn btn-primary stretched-link" href="countonme">Go and check it</a>
 			</div>
 		</div>
 	</div>
 </article>
 
-<article class="container my-5">
+{#<article class="container my-5">
 	<div class="card w-75 mx-auto p-4 border-success">
 		<div class="row">
 			<div class="col-sm col-md-3 text-center">
@@ -46,19 +46,19 @@
 			 </div>
 			<div class="col-sm col-md-9">
 				<h1 class="mt-0 mb-1">Torcher</h1>
-				<p class="text-muted">The ultimate app for counting anything.</p>
-				<a class="btn btn-primary stretched-link" href="countonme">Go and check it</a>
+				<p class="text-muted">The ultimate flashlight lamp.</p>
+				<a class="btn btn-primary stretched-link" href="torcher">Go and check it</a>
 			</div>
 		</div>
 	</div>
-</article>
+</article>#}
 
 </main>
 {% endblock main %}
 
 
 {% block footer %}
-<footer class="container-fluid bg-success bg-opacity-10">
+<footer class="container-fluid bg-success bg-opacity-10 mt-5">
 {#	<section class="tc pa4">
 		<a href="about">About</a>
 		<a href="privacy-policy">Privacy policy</a>
