About and other fixes.

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,11 +6,20 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<meta name="language" content="English">
+<meta name="author" content="TopAppField">
+<meta name="robots" content="index, follow">
+<meta name="revisit-after" content="14 days">
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/style.css">
+
+<meta name="title" content="Count On Me Counter">
+<meta name="description" content="A counter app with many options, advanced features, statistics, and various methods of counting.">
+<meta name="keywords" content="counter, count, tally, app, habit, sport, fitness, coffee, score, points, cards, game, shake, sound, color, icon, screen, light, flash, ad-free, free, premium, freemium, report, statistics, pie chart">
 
 <title>
 	{% if section.title %} {{ section.title }} - TopAppField
