--- a/templates/countonme.html
+++ b/templates/countonme.html
@@ -18,12 +18,39 @@
 
 
 {% block main %}
+<div class="py-5"></div>
 <section class="py-5">
-	<div class="py-5"></div>
 	<article class="container text-center">
 		<img class="w-100 img-fluid" src="/countonme/banner.png">	
 	</article>
 	<div class="py-5"></div>
+</section>
+
+
+<section class="py-5 bg-warning bg-opacity-10">
+	<article class="container">
+		<h5>A counter app with many options, advanced features, statistics, and various methods of counting.</h5>
+
+		<p>It helps you to improve your habits, yourself, and your life by creating multiple counters for anything you want: trips, meals, cars 🚘, people, planks, scores 🎯, points, coffees ☕️, or kisses 🥰. Count On Me Counter app includes advanced features such as sound effects, a large set of icons, color swatches, flash effects, vibration feedback, shake detection as well as extensive counter statistics, and visualizations.</p>
+
+		<p>Your counter can be triggered via various actions such as tapping👆and shaking 👋 while providing various visual and audio effects such as the screen or light flash, vibration or sound effects, etc.</p>
+
+		<p>You can customize each counter with a label, color 🏳️‍🌈, icon, sound effect 📣, screen flash, light flash 🔦, vibration, etc. and add custom notes.</p>
+
+		<p>Examine rich statistical information for each counter: number and ratio of increments and decrements, admire your counting progress via graphic visualizations such as a pie chart and progress bar.</p>
+
+		<p>Important counting events are also automatically logged. For example, the counting start date (the first change of a counter) and the last change of a counter.</p>
+
+		<p>For each counter, you can set its minimum and maximum values as well as the reset and step values (for example, if you want to increase your counter by larger than one increments).</p>
+
+		<p>You can organize your counters into groups using tags. For example, you may have a tag "rummy" or "bridge" for tracking scores at various card games.</p>
+
+		<p>Absolutely free of ads with no distractions and completely private: your data stays on your phone unless you export it and send it by email. No unnecessary permissions (no internet access) are required.</p>
+
+		<p>Most of the features are available in the free version, but with the premium version, you get even more icons, sound effects, and an unlimited number of counters as well as the satisfaction that you support good software. Thanks!</p>
+
+		<p>Enjoy counting!</p>
+	</article>
 </section>
 
 
@@ -100,6 +127,4 @@
 {{ macros::install_countonme() }}
 <div class="pb-5"></div>
 </section>
-
-
 {% endblock main %}
