--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,15 @@ blockquote:before {
   vertical-align: -0.4em;
 }
 
+blockquote:after {
+  color: #a0c080;
+  content: close-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-left: 0.25em;
+  vertical-align: -0.4em;
+}
+
 blockquote p {
   display: inline;
 }
