--- a/templates/index.html
+++ b/templates/index.html
@@ -31,27 +31,27 @@
 			 </div>
 			<div class="col-sm col-md-9">
 				<h1 class="mt-0 mb-1">Count On Me</h1>
-				<p class="text-muted">A counter app with many options, advanced features, statistics, and various methods of counting.</p>
+				<p class="text-muted">A tally counter app with many options, advanced features, statistics, and various methods of counting.</p>
 				<a class="btn btn-primary stretched-link" href="countonme">Go and check it</a>
 			</div>
 		</div>
 	</div>
 </article>
 
-{#<article class="container my-5">
+<article class="container my-5">
 	<div class="card w-75 mx-auto p-4 border-success">
 		<div class="row">
 			<div class="col-sm col-md-3 text-center">
-				<img class="border rounded-circle" src="countonme/icon.png" title="Torcher">
+				<img class="border rounded-circle" src="torcher/icon.jpg" title="Torcher">
 			 </div>
 			<div class="col-sm col-md-9">
-				<h1 class="mt-0 mb-1">Torcher</h1>
+				<h1 class="mt-0 mb-1">Flashlight Torcher</h1>
 				<p class="text-muted">The ultimate flashlight lamp.</p>
 				<a class="btn btn-primary stretched-link" href="torcher">Go and check it</a>
 			</div>
 		</div>
 	</div>
-</article>#}
+</article>
 
 </main>
 {% endblock main %}
