Torcher: minimal page

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 	<div class="card w-75 mx-auto p-4 border-success">
 		<div class="row">
 			<div class="col-sm col-md-3 text-center">
-				<img class="border rounded-circle" src="torcher/icon.jpg" title="Torcher">
+				<img class="border rounded-circle" src="torcher/icon.png" title="Torcher">
 			 </div>
 			<div class="col-sm col-md-9">
 				<h1 class="mt-0 mb-1">Flashlight Torcher</h1>
