--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -8,8 +8,8 @@
 			</a>
 			<nav class="d-inline-flex ms-md-auto">
 				<a class="top-navbar-item me-4 py-2" href="/countonme">Count On Me</a>
-{#
 				<a class="top-navbar-item me-4 py-2" href="/torcher">Torcher</a>
+{#
 				<a class="top-navbar-item me-4 py-2" href="/support">Support</a>
 #}
 				<a class="top-navbar-item py-2" href="/about">About</a>
@@ -36,6 +36,26 @@
 	    </div>
 	    <div class="col-md-4 col-12 d-flex">
 	        <a class="btn btn-primary m-auto" href="https://play.google.com/store/apps/details?id=com.topappfield.CountOnMe">Install from Google Play store</a>
+	    </div>
+	  </div>
+	</div>
+</section>
+{% endmacro %}
+
+{% macro install_torcher() %}
+<section class="container">
+	<div class="alert alert-info w-75 p-4 mx-auto">
+	  <div class="row">
+	    <div class="col-md-8 col-12 text-center">
+	      <h2 class="text-primary">
+	        {{ caption | default(value='Want to torch a flashlight?') }}
+	      </h2>
+	      <p class="text-muted">
+	        Flashlight Torcher app for Android OS is easily available for you to install in the Google Play store.
+	      </p>
+	    </div>
+	    <div class="col-md-4 col-12 d-flex">
+	        <a class="btn btn-primary m-auto" href="https://play.google.com/store/apps/details?id=com.topappfield.torcher">Install from Google Play store</a>
 	    </div>
 	  </div>
 	</div>
