Use-case hydration

--- a/templates/countonme.html
+++ b/templates/countonme.html
@@ -36,7 +36,7 @@
 				<div class="card p-2 h-100">
 					<h3 class="text-warning">Privacy-first app</h3>
 					<p class="text-muted">Your data is stored only on your phone and remains there. Nothing is transfered to the internet except if you export your data on your own.
-						Check our <a href="privacy-policy">privacy policy</a>.</p>
+						Check our <a href="/countonme/privacy-policy">privacy policy</a>.</p>
 				</div>
 			</div>
 			<div class="col">
