--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,15 +17,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/style.css">
 
-<meta name="title" content="Count On Me Counter">
-<meta name="description" content="A counter app with many options, advanced features, statistics, and various methods of counting.">
-<meta name="keywords" content="counter, count, tally, app, habit, sport, fitness, coffee, score, points, cards, game, shake, sound, color, icon, screen, light, flash, ad-free, free, premium, freemium, report, statistics, pie chart">
+<meta name="title" content="{{ macros::meta_title() }}">
+<meta name="description" content="{{ macros::meta_description() }}">
+<meta name="keywords" content="{{ macros::meta_keywords() }}">
 
-<title>
-	{% if section.title %} {{ section.title }} - TopAppField
-  {% elif page.title %} {{ page.title }} - TopAppField
-	{% else %} TopAppField {% endif%}
-</title>
+
+<title>{{ macros::html_title() }}</title>
 </head>
 
 
