--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -1,3 +1,28 @@
+{% macro html_title() %}
+{% if section.title %} {{ section.title }} - TopAppField
+{% elif page.title %} {{ page.title }} - TopAppField
+{% else %} TopAppField {% endif%}
+{% endmacro %}
+
+
+{% macro meta_title() %}
+{{ macros::html_title() }}
+{% endmacro %}
+
+
+{% macro meta_description() %}
+{% if section.description %} {{ section.description }}
+{% elif page.description %} {{ page.description }}
+{% endif%}
+{% endmacro %}
+
+
+{% macro meta_keywords() %}
+{% if section.extra.keywords %} {{ section.extra.keywords }}
+{% elif page.extra.keywords %} {{ page.extra.keywords }} {% endif%}
+{% endmacro %}
+
+
 {% macro navbar() %}
 <section class="top-navbar fixed-top py-2">
 	<div class="container">
