--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -34,6 +34,8 @@
 			<nav class="d-inline-flex ms-md-auto">
 				<a class="top-navbar-item me-4 py-2" href="/countonme">Count On Me</a>
 				<a class="top-navbar-item me-4 py-2" href="/torcher">Torcher</a>
+				<a class="top-navbar-item me-4 py-2" href="/narisatu">Narisatu</a>
+
 {#
 				<a class="top-navbar-item me-4 py-2" href="/support">Support</a>
 #}
@@ -47,40 +49,20 @@
 {% endmacro %}
 
 
-{% macro install_countonme() %}
+{% macro install_playstore(question, motto, appid) %}
 <section class="container">
 	<div class="alert alert-info w-75 p-4 mx-auto">
 	  <div class="row">
 	    <div class="col-md-8 col-12 text-center">
 	      <h2 class="text-primary">
-	        {{ caption | default(value='Want to count something?') }}
+	        {{ caption | default(value=question) }}
 	      </h2>
 	      <p class="text-muted">
-	        Count On Me Counter app for Android OS is easily available for you to install in the Google Play store.
+	        {{ motto }}
 	      </p>
 	    </div>
 	    <div class="col-md-4 col-12 d-flex">
-	        <a class="btn btn-primary m-auto" href="https://play.google.com/store/apps/details?id=com.topappfield.CountOnMe">Install from Google Play store</a>
-	    </div>
-	  </div>
-	</div>
-</section>
-{% endmacro %}
-
-{% macro install_torcher() %}
-<section class="container">
-	<div class="alert alert-info w-75 p-4 mx-auto">
-	  <div class="row">
-	    <div class="col-md-8 col-12 text-center">
-	      <h2 class="text-primary">
-	        {{ caption | default(value='Want to torch a flashlight?') }}
-	      </h2>
-	      <p class="text-muted">
-	        Flashlight Torcher app for Android OS is easily available for you to install in the Google Play store.
-	      </p>
-	    </div>
-	    <div class="col-md-4 col-12 d-flex">
-	        <a class="btn btn-primary m-auto" href="https://play.google.com/store/apps/details?id=com.topappfield.torcher">Install from Google Play store</a>
+	        <a class="btn btn-primary m-auto" href="https://play.google.com/store/apps/details?id=com.topappfield.{{appid}}">Install from Google Play store</a>
 	    </div>
 	  </div>
 	</div>
