Add: the landing page now includes Narisatu

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,22 @@
 	</div>
 </article>
 
+<article class="container my-5">
+	<div class="card w-75 mx-auto p-4 border-success">
+		<div class="row">
+			<div class="col-sm col-md-3 text-center">
+				<img class="border rounded-circle" src="narisatu/icon.png" width=128 height=128 title="Narisatu">
+			 </div>
+			<div class="col-sm col-md-9">
+				<h1 class="mt-0 mb-1">Narisatu Puzzle</h1>
+				<p class="text-muted">Simple puzzle with a complex solution</p>
+				<a class="btn btn-primary stretched-link" href="narisatu">Go and check it</a>
+			</div>
+		</div>
+	</div>
+</article>
+
+
 </main>
 {% endblock main %}
 
